The Linux build was not linking in pthreads, causing a crash with a undefined symbol. This is probably needed in a larger scope but I don't have the other platforms to test at this time.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -303,6 +303,9 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   endif()
 #Linux
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+  set(THREADS_PREFER_PTHREAD_FLAG ON)
+  find_package(Threads REQUIRED)
+  list(APPEND GlideN64_Private_Link_Libraries Threads::Threads)
   list(APPEND GLideN64_SOURCES ${GLideN64_SOURCES_UNIX})
   list(APPEND GlideN64_Private_Compile_Definitions OS_LINUX)
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
