--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -1,6 +1,6 @@
 ; Custom game settings
 [General]
-version=13
+version=14
 
 [TWINE]
 Good_Name=007 - The World Is Not Enough (E)(U)
@@ -71,6 +71,10 @@ frameBufferEmulation\N64DepthCompare=1
 [F1%20POLE%20POSITION%2064]
 Good_Name=F-1 Pole Position 64 (E)(U)
 frameBufferEmulation\copyToRDRAM=1
+
+[FLAPPYBIRD64]
+Good_Name=FlappyBird64
+frameBufferEmulation\copyFromRDRAM=1
 
 [GOEMON2%20DERODERO]
 Good_Name=Ganbare Goemon - Dero Dero Douchuu Obake Tenkomori (J)
