FlappyBird64 requires CopyFromRDRAM
Fixed #2197 FlappyBird HUD elements not displayed

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -73,6 +73,11 @@ frameBufferEmulation\N64DepthCompare=1
 Good_Name=F-1 Pole Position 64 (E)(U)
 frameBufferEmulation\copyToRDRAM=1
 
+[FLAPPYBIRD64]
+Good_Name=FlappyBird64
+frameBufferEmulation\copyFromRDRAM=1
+frameBufferEmulation\copyToRDRAM=0
+
 [GOEMON2%20DERODERO]
 Good_Name=Ganbare Goemon - Dero Dero Douchuu Obake Tenkomori (J)
 graphics2D\enableNativeResTexrects=1
