Set clip ratio to 1 when render image from DRARM.
Fixed #2211 Duplicate image in Dr. Mario

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -47,6 +47,7 @@ frameBufferEmulation\copyDepthToRDRAM=1
 [DR.MARIO%2064]
 Good_Name=Dr. Mario 64 (U)
 frameBufferEmulation\copyFromRDRAM=1
+frameBufferEmulation\copyToRDRAM=0
 
 [EXTREME_G]
 Good_Name=Extreme-G (E)
