Correct custom settings for Pokemon Snap: set rdram image dithering to Bayer.
Camera can't properly detects the Pidgeys at the start of the first level
when Blue Noise dithering is used.

Fixed #2213 Pokemon Snap detection broken

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -183,6 +183,7 @@ frameBufferEmulation\N64DepthCompare=1
 
 [POKEMON%20SNAP]
 Good_Name=Pokemon Snap (U)
+generalEmulation\rdramImageDitheringMode=1
 frameBufferEmulation\copyAuxToRDRAM=1
 frameBufferEmulation\copyToRDRAM=1
 frameBufferEmulation\fbInfoDisabled=0
