--- a/projects/msvc/GLideNUI-wtl.vcxproj
+++ b/projects/msvc/GLideNUI-wtl.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="..\..\src\GLideNUI-wtl\GlSettings.cpp" />
     <ClCompile Include="..\..\src\GLideNUI-wtl\IniFileClass.cpp" />
     <ClCompile Include="..\..\src\GLideNUI-wtl\InputDialog.cpp" />
+    <ClCompile Include="..\..\src\GLideNUI-wtl\Language.cpp" />
     <ClCompile Include="..\..\src\GLideNUI-wtl\ScreenShot.cpp" />
     <ClCompile Include="..\..\src\GLideNUI-wtl\Settings.cpp" />
     <ClCompile Include="..\..\src\GLideNUI-wtl\util.cpp" />
@@ -128,6 +129,7 @@
     <ClInclude Include="..\..\src\GLideNUI-wtl\GlSettings.h" />
     <ClInclude Include="..\..\src\GLideNUI-wtl\IniFileClass.h" />
     <ClInclude Include="..\..\src\GLideNUI-wtl\InputDialog.h" />
+    <ClInclude Include="..\..\src\GLideNUI-wtl\Language.h" />
     <ClInclude Include="..\..\src\GLideNUI-wtl\resource.h" />
     <ClInclude Include="..\..\src\GLideNUI-wtl\Settings.h" />
     <ClInclude Include="..\..\src\GLideNUI-wtl\util.h" />
@@ -135,6 +137,7 @@
     <ClInclude Include="..\..\src\GLideNUI-wtl\wtl-ColorButton.h" />
     <ClInclude Include="..\..\src\GLideNUI-wtl\wtl-OsdButton.h" />
     <ClInclude Include="..\..\src\GLideNUI-wtl\wtl-OsdPreview.h" />
+    <ClInclude Include="..\..\src\GLideNUI-wtl\wtl-tooltip.h" />
     <ClInclude Include="..\..\src\GLideNUI-wtl\wtl-WindowFont.h" />
     <ClInclude Include="..\..\src\GLideNUI-wtl\wtl.h" />
     <ClInclude Include="..\..\src\GLideNUI-wtl\WTL\atlapp.h" />
