--- a/projects/msvc/GLideN64.vcxproj
+++ b/projects/msvc/GLideN64.vcxproj
@@ -195,12 +195,19 @@
     <ResourceCompile>
       <PreprocessorDefinitions>ZILMAR_API;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ResourceCompile>
-    <PostBuildEvent>
+    <PostBuildEvent Condition="'$(Configuration)'=='Debug_qt' Or '$(Configuration)'=='Release_qt'">
       <Message>Copy result to plugins folder</Message>
-      <Command Condition="'$(Platform)'=='Win32'">if NOT "$(N64PluginsDir)" == "" (if not exist "$(N64PluginsDir)" mkdir "$(N64PluginsDir)"
-copy /Y "$(OutDir)$(TargetName).*" "$(N64PluginsDir)")</Command>
-      <Command Condition="'$(Platform)'=='x64'">if NOT "$(N64PluginsDir_x64)" == "" (if not exist "$(N64PluginsDir_x64)" mkdir "$(N64PluginsDir_x64)"
-copy /Y "$(OutDir)$(TargetName).*" "$(N64PluginsDir_x64)")</Command>
+      <Command Condition="'$(Platform)'=='Win32'">if NOT "$(PJ64PluginsDirQT)" == "" (if not exist "$(PJ64PluginsDirQT)" mkdir "$(PJ64PluginsDirQT)"
+copy /Y "$(OutDir)$(TargetName).*" "$(PJ64PluginsDirQT)")</Command>
+      <Command Condition="'$(Platform)'=='x64'">if NOT "$(PJ64PluginsDirQT_x64)" == "" (if not exist "$(PJ64PluginsDirQT_x64)" mkdir "$(PJ64PluginsDirQT_x64)"
+copy /Y "$(OutDir)$(TargetName).*" "$(PJ64PluginsDirQT_x64)")</Command>
+    </PostBuildEvent>
+    <PostBuildEvent Condition="'$(Configuration)'=='Debug_wtl' Or '$(Configuration)'=='Release_wtl'">
+      <Message>Copy result to plugins folder</Message>
+      <Command Condition="'$(Platform)'=='Win32'">if NOT "$(PJ64PluginsDirWTL)" == "" (if not exist "$(PJ64PluginsDirWTL)" mkdir "$(PJ64PluginsDirWTL)"
+copy /Y "$(OutDir)$(TargetName).*" "$(PJ64PluginsDirWTL)")</Command>
+      <Command Condition="'$(Platform)'=='x64'">if NOT "$(PJ64PluginsDirWTL_x64)" == "" (if not exist "$(PJ64PluginsDirWTL_x64)" mkdir "$(PJ64PluginsDirWTL_x64)"
+copy /Y "$(OutDir)$(TargetName).*" "$(PJ64PluginsDirWTL_x64)")</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)'=='Debug_mupenplus' Or '$(Configuration)'=='Release_mupenplus'">
